k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: api
          # image: gcr.io/GOOGLE_CLOUD_PROJECT/houseshare-backend:COMMIT_SHA
          image: gcr.io/smiling-wind-250011/houseshare-backend:COMMIT_SHA
          ports:
            - containerPort: 8080
