k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: basic-ingress-ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: backend-nodeport-service
              servicePort: 80
